crates/knok/tests/ui/missing_backend.stderr
error: missing required backend = "..." argument
 --> tests/ui/missing_backend.rs:3:1
  |
3 | #[knok::graph]
  | ^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `knok::graph` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `knok::prelude::*`
 --> tests/ui/missing_backend.rs:1:5
  |
1 | use knok::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
